--- a/package.json
+++ b/package.json
@@ -1,4 +1,75 @@
 {
-  "name": "jest-cli-tester",
-  "packageManager": "yarn@4.5.3"
+	"name": "@hanseltime/jest-cli-tester",
+	"version": "0.0.0",
+	"description": "Tools for testing cli scripts entrypoints within the normal jest flow including mocking",
+	"main": "dist/cjs/index.js",
+	"types": "dist/types/index.d.ts",
+	"exports": {
+		".": {
+			"types": "./dist/types/index.d.ts",
+			"require": "./dist/cjs/index.js",
+			"import": "./dist/esm/index.mjs",
+			"default": "./dist/esm/index.mjs"
+		},
+		"./transform": {
+			"types": "./dist/types/cliTransformer.d.ts",
+			"require": "./dist/cjs/cliTransformer.js",
+			"import": "./dist/esm/cliTransformer.mjs",
+			"default": "./dist/esm/cliTransformer.mjs"
+		}
+	},
+	"scripts": {
+		"build:esm": "tswc -- src -d dist/esm --config-file .esm.swcrc --strip-leading-paths --out-file-extension mjs",
+		"build:cjs": "tswc -- src -d dist/cjs --config-file .cjs.swcrc --strip-leading-paths",
+		"build:bin": "node ./bin-build.js",
+		"build:types": "tsc",
+		"build": "yarn build:types && yarn build:esm && yarn build:cjs && yarn build:bin",
+		"test:ts-jest": "yarn build && jest --clearCache && jest",
+		"test:babel-jest": "yarn tsc --project tsconfig.test.babel.json && jest --clearCache && jest --config jest.config.babel.js",
+		"test": "yarn build && yarn test:ts-jest && yarn test:babel-jest",
+		"lint": "biome lint",
+		"format": "biome format",
+		"release": "yarn semantic-release",
+		"ts-run": "./bin/ts-run.sh"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@commitlint/config-angular": "^18.4.3",
+		"@hanseltime/esm-interop-tools": "^1.0.2",
+		"@hanseltime/pkgtest": "^1.3.0",
+		"@hanseltime/swc-plugin-node-globals-inject": "^1.0.0",
+		"@jest/types": "^29.6.3",
+		"@swc/cli": "^0.5.2",
+		"@swc/core": "^1.10.1",
+		"@types/argparse": "^2.0.17",
+		"@types/convert-source-map": "^2",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^22.10.2",
+		"argparse": "^2.0.1",
+		"commitlint": "^18.4.3",
+		"husky": "^9.1.7",
+		"jest": "^29.7.0",
+		"jest-chain-transform": "^0.0.8",
+		"ts-jest": "^29.2.5",
+		"tswc": "^1.4.0",
+		"tsx": "^4.19.2",
+		"typescript": "^5.7.2"
+	},
+	"dependencies": {
+		"@jest/create-cache-key-function": "^29.7.0",
+		"@jest/schemas": "^29.6.3",
+		"@jest/transform": "^29.7.0",
+		"acorn": "^8.14.0",
+		"acorn-walk": "^8.3.4",
+		"convert-source-map": "^2.0.0",
+		"get-tsconfig": "^4.8.1",
+		"vlq": "^2.0.4"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"engines": {
+		"node": ">=18"
+	},
+	"packageManager": "yarn@3.8.7"
 }
