--- a/biome.json
+++ b/biome.json
@@ -3,7 +3,7 @@
 	"vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["dist/*", "tmp/*", "site/*", "esm-packages.json"]
+		"ignore": ["dist/*", "site/*", "esm-packages.json"]
 	},
 	"formatter": { "enabled": true, "indentStyle": "tab" },
 	"organizeImports": { "enabled": true },
@@ -89,7 +89,7 @@
 			}
 		},
 		{
-			"include": ["*.ts"],
+			"include": ["*.spec.ts", "*.test.ts"],
 			"javascript": {
 				"globals": [
 					"afterEach",
