--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
 		"ts-jest": "^29.2.5",
 		"tswc": "^1.4.0",
 		"tsx": "^4.19.2",
+		"typedoc": "^0.28.1",
+		"typedoc-plugin-markdown": "^4.5.2",
 		"typescript": "^5.7.2"
 	},
 	"dependencies": {
