--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
 		"@hanseltime/pkgtest": "^1.3.0",
 		"@hanseltime/swc-plugin-node-globals-inject": "^1.0.0",
 		"@jest/types": "^29.6.3",
+		"@semantic-release/changelog": "^6.0.3",
+		"@semantic-release/exec": "^7.0.3",
+		"@semantic-release/git": "^10.0.1",
 		"@swc/cli": "^0.5.2",
 		"@swc/core": "^1.10.1",
 		"@types/argparse": "^2.0.17",
@@ -50,6 +53,7 @@
 		"husky": "^9.1.7",
 		"jest": "^29.7.0",
 		"jest-chain-transform": "^0.0.8",
+		"semantic-release": "^22.0.12",
 		"ts-jest": "^29.2.5",
 		"tswc": "^1.5.0",
 		"tsx": "^4.19.2",
